# CollatzConjecture-

./: CMakeLists.txt  README.md
include/: phi_collatz.h
src/: main.cpp  phi_collatz.cpp
tests/: test_collatz.cpp
